--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,36 @@
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #e9e9e9;
+}
+
+.form {
+  border-radius: 20px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  height: 300px;
+  padding: 20px;
+  background-color: #fff;
+}
+.form-item{
+  width: 100%;
+}
+
+.form-item.button-item{
+  width: 80%;
+}
+
+.button{
+  width: 100%;
 }
